--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#111827" media="(prefers-color-scheme: dark)" />
     <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
 
-    <title>Milka's Burial</title>
+    <title>Daniel's Burial</title>
   </head>
   <body>
     <div id="root"></div>
