--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://firebasestorage.googleapis.com/v0/b/comrade-trends.appspot.com/o/milka.jpg?alt=media&token=4bd86463-c7ae-4413-b634-0628c0929ce5"
+      href="https://firebasestorage.googleapis.com/v0/b/comrade-trends.appspot.com/o/Screenshot_2025-09-10-09-20-05-904_org.readera-edit.jpg?alt=media&token=66261262-6fa7-4313-87d9-3a1eb22ecbfb"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
